@@ -1,5 +1,11 @@
 2000-11-10  Lars Wirzenius  <liw@iki.fi>
 
+	* gw/wap-appl.c: Rearranged code in preparation for changing
+	the thread structure so that a new thread is not started for
+	each request.
+
+2000-11-10  Lars Wirzenius  <liw@iki.fi>
+
 	* gwlib/http.[ch]: Updated documentation, moved HTTP_PORT to .c,
 	since no-one else needs to know it.
 
